--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -10,6 +10,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+        with:
+          sparse-checkout: |
+           .github
+           Source
       
       - name: Set up Node 18.x
         uses: actions/setup-node@v3
@@ -35,11 +39,11 @@ jobs:
     
       
       - name: Install NPM Project
-        run: jf npm install --registry https://soleng.jfrog.io/artifactory/api/npm/ohadz-test-npm
+        run: jf npm install --registry ${{ vars.NPM_REG }}https://soleng.jfrog.io/artifactory/api/npm/ohadz-test-npm
       
       
       - name: Build Docker Image
-        run: docker build -t ohadz-npm-project ./source
+        run: docker build -t ohadz-npm-project ./Source
      
       - name: Tag Docker Image
         run: docker tag ohadz-npm-project:latest soleng.jfrog.io/ohadz-test-docker/ohadz-npm-project:latest
