--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -36,7 +36,10 @@ jobs:
     
       - name: Login to Docker Enviroment
         run: docker login ${{ vars.DOCKER_REG_SRV }} -u ${{ secrets.JF_USER }} -p ${{ secrets.JF_PASS }} 
-    
+        
+      - name: List NPM Config
+        run: npm config list
+        
       - name: Install NPM Project
         run: jf npm install --registry ${{ vars.NPM_REG }}
       
