--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Set up Node 18.x
         uses: actions/setup-node@v3
         with:
-          java-version: 18.x
+          node-version: 18.x
         
       - name: Setup JFrog CLI
         uses: jfrog/setup-jfrog-cli@v3
