--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -44,6 +44,7 @@ jobs:
         
       - name: Install NPM Project
         run: jf npm install --registry ${{ vars.NPM_REG }}
+        working-directory: Source
       
       - name: Build Docker Image
         run: docker build -t ohadz-npm-project ./Source
