--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -39,12 +39,13 @@ jobs:
         
       - name: NPM Config
         run: |
-          jf rt npmc --registry ${{ vars.NPM_REG }} 
+          jf rt npmc --server-id-resolve=setup-jfrog-cli-server --server-id-deploy=setup-jfrog-cli-server --repo-deploy ${{ vars.NPM_REPO }} --repo-resolve ${{ vars.NPM_REPO }} --global
+
           npm config ls -l
         working-directory: ./Source
         
       - name: Install NPM Project
-        run: jf npm install --registry ${{ vars.NPM_REG }}
+        run: jf npm install
         working-directory: ./Source
       
       - name: Build Docker Image
