--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -45,7 +45,7 @@ jobs:
         working-directory: ./Source
         
       - name: Install NPM Project
-        run: jf npm install
+        run: jf npm install --server-id-resolve=setup-jfrog-cli-server --server-id-deploy=setup-jfrog-cli-server --repo-deploy ${{ vars.NPM_REPO }} --repo-resolve ${{ vars.NPM_REPO }} --global
         working-directory: ./Source
       
       - name: Build Docker Image
