--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -69,7 +69,7 @@ jobs:
           # Publish build info
           jf rt bp
           
-   #   - name: Scan Build
-   #     run: jf bs --fail=false
+      - name: Scan Build
+        run: jf bs --fail=false
           
     
